--- a/index.html
+++ b/index.html
@@ -1,44 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tip calculator app</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<link rel="stylesheet" href="style.css" />
 
-  Bill
+		<title>Frontend Mentor | Tip calculator app</title>
+	</head>
+	<body>
+		<main>
+			<div class="container">
+				<div class="logo">
+					<img src="./images/logo.svg" alt="splitter-logo" />
+				</div>
 
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
+				<div class="white">
+					<form>
+						<div class="white-left">
 
-  Number of People
+							<div class="bill">
+								<p>Bill</p>
+								<input type="number" id="bill-amount" placeholder="0" />
+							</div>
 
-  Tip Amount
-  / person
+							<div class="tip">
+								<p>Select Tip %</p>
+								<div class="tip-percent">
+									<button type="button" id="tip1" onclick="calcTip()">5%</button>
+									<button type="button" id="tip2">10%</button>
+									<button type="button" id="tip3">15%</button>
+									<button type="button" id="tip4">25%</button>
+									<button type="button" id="tip5">50%</button>
+									<input type="number" id="tip6" placeholder="Custom"></input>
+								</div>
+							</div>
 
-  Total
-  / person
+							<div class="group">
+								<p>Number of People</p>
+								<input type="number" id="group-size" min="1" placeholder="0" />
+							</div>
+							
+						</div>
 
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+						<div class="cyan">
+							<div class="tip-total">
+								<div class="tip-amount">
+									<div class="left">
+										<p>Tip Amount</p>
+										<p class="per">/ person</p>
+									</div>
+	
+									<h2 class="bill-total">$0.00</h2>
+								</div>
+	
+								<div class="total">
+									<div class="right">
+										<p>Total</p>
+										<p class="per">/ person</p>
+									</div>
+	
+									<h2 class="bill-total">$0.00</h2>
+								</div>
+							</div>
+
+							<div>
+								<input type="reset" value="RESET" class="reset-button" ></input>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</main>
+
+		<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				>Frontend Mentor</a
+			>. Coded by <a href="#">Your Name Here</a>.
+		</div>
+
+		<script src="script.js"></script>
+	</body>
 </html>
